Tambahkan permission NSPhotoLibraryUsageDescription untuk platform iOS

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Butuh permission untuk mengambil gambar dari galeri</string>
 </dict>
 </plist>
