--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,7 +43,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>Allow access to camera</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Allow access to microphone for video recording</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Butuh permission untuk mengambil gambar dari galeri</string>
+	<string>Allow access to photo library</string>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 </dict>
 </plist>
